--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,5 +1,6 @@
 @import '_header.scss';
 @import '_main.scss';
-@import '_section1.scss';
-@import '_section2.scss';
+@import '_section2-1.scss';
+@import '_section2-2.scss';
+@import '_section3-1.scss';
 @import '_footer.scss';
